# DeepPhysics-Sofa

./: CMakeLists.txt  README.md
cmake/: DPSTools.cmake  DeepPhysicsSofaTools.cmake  FindEigen3.cmake  FindSOFA.cmake
src/: CMakeLists.txt  DPSConfig.cmake.in
src/Controller/: DummyController.cpp  DummyController.h
src/Event/: PredictBeginEvent.cpp  PredictBeginEvent.h  PredictEndEvent.cpp  PredictEndEvent.h  PredictionPickedEvent.cpp  PredictionPickedEvent.h
src/Forcefield/: FreeConstantForceField.cpp  FreeConstantForceField.h
src/ODE/: HybridNewtonRaphson.cpp  HybridNewtonRaphson.h  KSolver.cpp  KSolver.h  NewtonRaphson.cpp  NewtonRaphson.h  ODEInterface.cpp  ODEInterface.h
src/Python/: CMakeLists.txt  DPS.cpp  DeepPhysicsSofaPython.cpp  __init__.py
src/Python/Solver/: LDLTSolver.cpp  LDLTSolver.h
src/Solver/: LDLTSolver.cpp  LDLTSolver.h
